Commentaire + nettoyage + Amelioration ReadMe